config-root/namespaces/knative-serving/knative-net-istio/istio-webhook-peerauthentication.yaml
# Source: knative-net-istio/templates/istio-webhook-peerauthentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "istio-webhook"
  namespace: "knative-serving"
  labels:
    serving.knative.dev/release: "v0.19.0"
    networking.knative.dev/ingress-provider: istio
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  selector:
    matchLabels:
      app: istio-webhook
  mtls:
    mode: PERMISSIVE
