config-root/namespaces/knative-serving/knative-net-istio/webhook-peerauthentication.yaml
# Source: knative-net-istio/templates/webhook-peerauthentication.yaml
# Allows the Webhooks to be reached by kube-api with or without
# sidecar injection and with mTLS PERMISSIVE and STRICT. 
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "webhook"
  namespace: "knative-serving"
  labels:
    serving.knative.dev/release: "v0.19.0"
    networking.knative.dev/ingress-provider: istio
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  selector:
    matchLabels:
      app: webhook
  mtls:
    mode: PERMISSIVE
