config-root/namespaces/knative-serving/knative-net-istio/istio-webhook-svc.yaml
# Source: knative-net-istio/templates/istio-webhook-svc.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: istio-webhook
  namespace: knative-serving
  labels:
    role: istio-webhook
    serving.knative.dev/release: "v0.19.0"
    networking.knative.dev/ingress-provider: istio
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  ports:
    # Define metrics and profiling for them to be accessible within service meshes.
    - name: http-metrics
      port: 9090
      targetPort: 9090
    - name: http-profiling
      port: 8008
      targetPort: 8008
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    app: istio-webhook
