config-root/namespaces/knative-serving/knative-net-istio/knative-local-gateway-gateway.yaml
# Source: knative-net-istio/templates/knative-local-gateway-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-local-gateway
  namespace: knative-serving
  labels:
    serving.knative.dev/release: "v0.19.0"
    networking.knative.dev/ingress-provider: istio
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8081
        name: http
        protocol: HTTP
      hosts:
        - "*"
